# portal

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.actix  Dockerfile.dev  Dockerfile.fiber  Makefile  README.md  index.html
actix-server/: Cargo.toml
actix-server/src/: main.rs  storage.rs
actix-server/src/middlewares/: mod.rs
client/: Cargo.toml  Trunk.toml  index.html  nginx.conf  nginx.dev.conf  tailwind.config.js
client/src/: main.rs  router.rs
client/src/api/: data.rs  login.rs  mod.rs  post.rs  upload.rs
client/src/api/schema/: get.graphql  login.graphql  schema.graphql  set.graphql  upload.graphql
client/src/assets/: data.css  login.css
client/src/components/: label_input.rs
client/src/components/elements/: dark_mode.rs  label_input.rs  mod.rs  toast.rs
client/src/components/pages/: data.rs  login.rs
client/src/handlers/: data_auth.rs  data_updater.rs  mod.rs
client/src/models/: data_updater.rs
client/src/pages/: data.css  data.rs  login.css  login.rs
client/src/utils/: api_response.rs  mod.rs  str_tools.rs
fiber-server/: go.mod  go.sum  gqlgen.yml  main.go
fiber-server/auth/: mod.go
fiber-server/graph/: generated.go  schema.graphqls  schema.resolvers.go
fiber-server/graph/model/: models_gen.go
fiber-server/logics/: mod.go
fiber-server/utils/: jwt.go  storage.go
portal-client/: Cargo.toml
portal-client/src/: main.rs
portal-client/src/api/: login.rs  mod.rs  post.rs
portal-client/src/api/schema/: login.graphql  schema.graphql
portal-client/src/components/: mod.rs
portal-client/src/components/pages/: login.rs
portal-server/src/: main.rs  storage.rs
server/: Cargo.toml
server/src/: main.rs  storage.rs  upload.rs
server/upload/: Keys(["content-type", "content-disposition"])
src/: app.rs  main.rs  router.rs  store.rs
src/assets/: data.css  login.css
src/components/: mod.rs
src/components/elements/: copy_button.rs  label_input.rs  mod.rs  submit_button.rs  text_input.rs
src/components/pages/: data.rs  home.rs  login.rs  mod.rs
