[package]
name = "portal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.8.0"
serde = "1.0.152"
serde_json = "1.0.91"
stylist = { version = "0.12.0", features = ["yew"] }
web-sys = { version = "0.3.60", features = ["Document", "Element"] }
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
yewdux = "0.9.0"
dioxus = "0.3.1"
dioxus-web = "0.3.0"
dioxus-router = "0.3.0"
reqwest = "0.11.14"
