[package]
name = "portal-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "=5.0.6"
async-graphql-actix-web = "=5.0.6"
actix-web = { version = "=4.3.0", default-features = false, features = [
    "macros",
] }
actix-cors = "=0.6.4"
futures-util = "0.3.25"
slab = "0.4.7"
dotenv = "0.15.0"
jsonwebtoken = "8.2.0"
serde = "1.0.152"
chrono = "0.4.23"
lazy_static = "1.4.0"
async-trait = "0.1.77"
