[package]
name = "portal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.8.0"
serde = "1.0.152"
serde_json = "1.0.91"
web-sys = { version = "0.3.60", features = ["HtmlDocument"] }
dioxus = { version = "0.2.4", features = ["web", "router"] }
dioxus-router = "0.3.0"
reqwest = { version = "0.11.14", features = ["json"] }
wasm-bindgen= "0.2"
graphql_client="0.12.0"