[package]
name = "portal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.8.0"
serde = "1.0.152"
serde_json = "1.0.91"
web-sys = { version = "0.3.60", features = ["HtmlDocument"] }
dioxus = "0.3.1"
dioxus-router = { version = "0.3.0", features = ["web"] }
dioxus-web="0.3.0"
reqwest = { version = "0.11.14", features = ["json"] }
wasm-bindgen= "0.2"
graphql_client="0.12.0"
lazy_static="1.4.0"